tests/invalid/While_Invalid_4.whiley
function sum(int[] ls) -> int:
    int i = 0
    int r = 0
    //
    while i < |ls|:
        r = [ls[i]; 1]
        i = i + 1
    //
    return r
